Move find location link in drupal,.

--- a/docroot/themes/custom/tower_health/templates/form/form-element--location-proximity-value-input.html.twig
+++ b/docroot/themes/custom/tower_health/templates/form/form-element--location-proximity-value-input.html.twig
@@ -58,5 +58,7 @@
     errors ? 'form-item--error',
   ]
 %}
-test
-{% include "@atoms/05-forms/_form-element.twig" %}
+{% extends "@atoms/05-forms/_form-element.twig" %}
+{% block link %}
+  {{ element.location_link }}
+{% endblock %}
