--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/_html.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/_html.twig
@@ -39,5 +39,14 @@
     {{ page }}
     {{ page_bottom }}
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
+    <script type="text/javascript">
+      /*<![CDATA[*/
+      (function() {
+        var sz = document.createElement('script'); sz.type = 'text/javascript'; sz.async = true;
+        sz.src = '//siteimproveanalytics.com/js/siteanalyze_6257972.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(sz, s);
+      })();
+      /*]]>*/
+    </script
   </body>
 </html>
