Adjust margin on proximity filter, and adjust size of link.

--- a/docroot/themes/custom/tower_health/templates/form/form-element--location-proximity-value-input.html.twig
+++ b/docroot/themes/custom/tower_health/templates/form/form-element--location-proximity-value-input.html.twig
@@ -48,6 +48,7 @@
   set classes = [
     'form-section__item',
     'form-section__item--oneHalf',
+    'form-section__item--group-item',
     'js-form-item',
     'form-item',
     'js-form-type-' ~ type|clean_class,
