--- a/docroot/themes/custom/tower_health/templates/form/form-element--provider-proximity-value-input.html.twig
+++ b/docroot/themes/custom/tower_health/templates/form/form-element--provider-proximity-value-input.html.twig
@@ -49,6 +49,7 @@
     'form-section__item',
     'form-section__item--oneHalf',
     'js-form-item',
+    'form-section__item--group-item',
     'form-item',
     'js-form-type-' ~ type|clean_class,
     'form-item-' ~ name|clean_class,
