--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -192,6 +192,10 @@
     }
   }
 
+  .form-section__item--group-item {
+    margin-bottom: 0px;
+  }
+
   .form-item--checkbox__item {
     display: inline-block;
     position: relative;
