Add theme setting to set link for about reviews.

--- a/docroot/themes/custom/tower_health/templates/fields/field--field_rating_comments_ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field_rating_comments_ref.html.twig
@@ -43,5 +43,6 @@
   "rating_icon": rating_icon,
   "reviews": reviews,
   "rating": rating,
-  "count": count
+  "count": count,
+  "review_url": review_url
 } %}
