Add image option for sidebar card.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-card/card--sidebar.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-card/card--sidebar.twig
@@ -1,9 +1,19 @@
 <div class="card card--sidebar js-section-animation">
   <a class="card__link" href="{{ cta.url }}">
-    <h2 class="card__title">{{ title }}</h2>
-    <div class="card__desc">
-      {{ desc }}
+    {% if image %}
+      <div class="card__image">
+        {% block image %}
+          <img src="{{ image.src }}" alt="{{ image.alt }}" />
+        {% endblock %}
+      </div>
+    {% endif %}
+
+    <div class="card__content">
+      <h2 class="card__title">{{ title }}</h2>
+      <div class="card__desc">
+        {{ desc }}
+      </div>
+      <span class="card__cta">{{ cta.label }}</span>
     </div>
-    <span class="card__cta">{{ cta.label }}</span>
   </a>
 </div>
