--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -180,8 +180,10 @@
 
 // sidebar cards
 .card--sidebar {
-  padding: 1.5em;
-  
+  .card__content {
+    padding: 1.5em;
+  }
+
   .card__title {
     @include adjust-font-size-to($sm-heading, 1.15);
   }
