--- a/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--card--sidebar-card.html.twig
+++ b/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--card--sidebar-card.html.twig
@@ -36,16 +36,18 @@
  * @ingroup themeable
  */
 #}
-{% embed "@molecules/card/card.twig" with {
-  "card": {
-    "date": content.field_card_date|render,
-    "type": node.gettype,
-    "title": content.field_card_title|render,
-    "desc": content.field_card_description|render,
-    "url": {
-      "label": content.field_card_link.0['#title'],
-      "link": content.field_card_link.0['#url'],
-    },
-  }
+{% embed "@molecules/sidebar-card/card--sidebar.twig" with {
+  "image": {
+    "src": file_url(paragraph.field_card_image.entity.field_media_image.entity.fileuri),
+    "alt": paragraph.field_card_image.entity.field_media_image.entity.alt.value
+  },
+  "date": content.field_card_date|render,
+  "type": node.gettype,
+  "title": content.field_card_title|render,
+  "desc": content.field_card_description|render,
+  "url": {
+    "label": content.field_card_link.0['#title'],
+    "link": content.field_card_link.0['#url'],
+  },
 } %}
 {% endembed %}
