--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/_html.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/_html.twig
@@ -47,6 +47,6 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(sz, s);
       })();
       /*]]>*/
-    </script
+    </script>
   </body>
 </html>
