adjust file download cta to include a secondary link.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/file-download-cta/_file-download-cta.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/file-download-cta/_file-download-cta.scss
@@ -40,6 +40,13 @@
     align-self: center;
     margin-top: 0;
   }
+  
+  .divider {
+    @include adjust-font-size-to($label, 1);
+    display: inline-block;
+    margin: 0 .5em;
+    color: $trust;
+  }
 }
 
 .file-download__title {
