add overflow to ul and ol when in a wysiwyg

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/03-lists/_lists.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/03-lists/_lists.scss
@@ -9,6 +9,11 @@
 ul,
 ol {
   padding-left: 1em;
+  
+  // ensures that lists will float properly when there is an inline image within a wysiwyg
+  .text-long & {
+    overflow: hidden;
+  }
 }
 
 ul {
