adjust basic page example to contain a list next to an image

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/rich-text/rich-text.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/rich-text/rich-text.twig
@@ -1,7 +1,7 @@
 {% if rich_text_full_width == true %}
   <div class="grid grid--sm-centered">
 {% endif %}
-  <div class="rich-text">
+  <div class="rich-text text-long">
     {% block rich_text %}
       {% for item in rich_text %}
         {% if item.type == "blockquote" %}
