--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/resource-list-item/_resource-list-item.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/resource-list-item/_resource-list-item.scss
@@ -1,10 +1,11 @@
 .resource-list-item {
-  margin-bottom: 1em;
+  margin-bottom: 1.25em;
 }
 
 .resource-list-item__title {
   @include adjust-font-size-to($text, .9);
   margin-bottom: 0;
+  margin-top: 0;
   
   a:link,
   a:visited {
