--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/resource-list-card/_resource-list-card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/resource-list-card/_resource-list-card.scss
@@ -21,3 +21,28 @@
   margin: 0;
   padding: 0;
 }
+
+.resource-list-card--full {
+  @include grid;
+  
+  @include breakpoint($bp3) {
+    .resource-list-card__header {
+      text-align: center;
+      margin-bottom: 1.5em;
+      padding-bottom: 1.5em;
+    }
+    
+    .resource-list-card__title {
+      @include adjust-font-size-to($md-heading, 1.1);
+    }
+    
+    .resource-list-card__list {
+      columns: 2;
+      column-gap: 3em;
+    }
+    
+    .resource-list-item {
+      break-inside: avoid;
+    }
+  }
+}
