add the two button version to the basic page with components

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
@@ -51,6 +51,13 @@
       links: image_callout.links,
     } %}
     
+    {% include "@organisms/anchored-cta-block/anchored-cta-block.twig" with {
+      "title": cta2.title,
+      "text": cta2.text,
+      "link": cta2.link,
+      "link_2": cta2.link_2
+    } %}
+    
     {% include "@molecules/rich-text/rich-text.twig" with {
       rich_text_full_width: true,
       rich_text: paragraph_rich_text
