create a two column wysiwyg template and include an example on the basic page

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/text/_text.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/text/_text.scss
@@ -57,3 +57,11 @@
     @extend .hr;
   }
 }
+
+.rich-text__two-col {
+  
+  @include breakpoint($bp2) {
+    column-count: 2;
+    column-gap: 1.5em;
+  }
+}
