modify rich text example to allow a 'left full width' variant.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/rich-text/rich-text.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/rich-text/rich-text.twig
@@ -1,7 +1,10 @@
-{% if rich_text_full_width == true %}
+{% if rich_text_full_width == true and rich_text_left == true %}
+<div class="page--container">
+  <div class="main-content">
+{% elseif rich_text_full_width == true and rich_text_left == false %}
   <div class="grid grid--sm-centered">
 {% endif %}
-  <div class="rich-text">
+  <div class="rich-text text-long">
     {% block rich_text %}
       {% for item in rich_text %}
         {% if item.type == "blockquote" %}
@@ -50,6 +53,10 @@
       {% endfor %}
     {% endblock %}
   </div>
+{% if rich_text_left == true %}
+  </div>
+{% endif %}
 {% if rich_text_full_width == true %}
   </div>
 {% endif %}
+
