--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
@@ -53,6 +53,7 @@
     
     {% include "@molecules/rich-text/rich-text.twig" with {
       rich_text_full_width: true,
+      rich_text_left: true,
       rich_text: paragraph_rich_text
     } %}
     
@@ -92,6 +93,7 @@
     
     {% include "@molecules/rich-text/rich-text.twig" with {
       rich_text_full_width: true,
+      rich_text_left: false,
       rich_text: paragraph_rich_text
     } %}
     
