--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
@@ -52,8 +52,7 @@
     } %}
     
     {% include "@molecules/rich-text/rich-text.twig" with {
-      rich_text_full_width: true,
-      rich_text_left: true,
+      rich_text_full_left: true,
       rich_text: paragraph_rich_text
     } %}
     
@@ -93,7 +92,6 @@
     
     {% include "@molecules/rich-text/rich-text.twig" with {
       rich_text_full_width: true,
-      rich_text_left: false,
       rich_text: paragraph_rich_text
     } %}
     
