Fix inline issue.

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/04-images/00-image/_image.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/04-images/00-image/_image.scss
@@ -52,7 +52,7 @@ figure {
       max-width: 50%;
 
       &.figure--inline-mobile-full-width {
-        margin-left: 1em;
+        margin-right: 1em;
       }
     }
     
