Make all filters capitalized.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/_listing-filter.scss
@@ -152,7 +152,7 @@
   }
 
   .chosen-container .search-choice,
-  .chosen-container .chosen-results .active-result,
+  .chosen-container .chosen-results,
   .facet-item__value {
     text-transform: capitalize;
   }
