Display ratings or review in a link depending on if there are comments.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/_provider-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/_provider-header.scss
@@ -116,14 +116,12 @@
 .provider-header__ratings {
   margin-top: 2em;
   display: flex;
+}
 
-  a,
-  a:link,
-  a:visited {
-    @include adjust-font-size-to($label, .75);
-    display: inline-block;
-    margin-left: 1em;
-  }
+.provider-header__ratings-amt {
+  @include adjust-font-size-to($label, .75);
+  display: inline-block;
+  margin-left: 1em;
 }
 
 .provider-header__cta {
