--- a/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
@@ -91,6 +91,7 @@
   "provider_video": provider_video,
   "rating": rating,
   "review_amt": review_amt,
+  "rating_comments": rating_comments,
   "appt_phone": {
     "number": appointment_phone,
     "label": appointment_phone_label
