--- a/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--file-download-cta.html.twig
+++ b/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--file-download-cta.html.twig
@@ -51,7 +51,7 @@
 {% endif %}
 
 {% set pdf = content.field_file_download_cta_file.0['#media'].field_media_file_1.entity.uri.value %}
-{% set pdf_src = image ? file_url(pdf) %}
+{% set pdf_src = file_url(pdf) %}
 
 {% if content.field_file_download_cta_second|render %}
   {% set pdf_2 = content.field_file_download_cta_second.0['#media'].field_media_file_1.entity.uri.value %}
