--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/recognition-card/_recognition-card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/recognition-card/_recognition-card.scss
@@ -56,6 +56,7 @@
   height: 0;
   padding: 56.25% 0 0 0; // this yields a 16:9 container
   overflow: hidden;
+  margin-bottom: .5em;
 
   img {
     position: absolute;
