Remove hospital affiliation location ref unless a hospitalist, hide appointment link if hospitalist.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
@@ -56,7 +56,7 @@
         {% endif %}
       </div>
     </div>
-    {% if provider.link %}
+    {% if provider.link and provider.appointment_link == TRUE %}
     <div class="teaser__button">
       {% include "@atoms/icon-button/icon-button.twig" with {
         "url": provider.link.href,
