--- a/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
@@ -95,7 +95,8 @@
   "appt_phone": {
     "number": appointment_phone,
     "label": appointment_phone_label
-  }
+  },
+  "appointment_link": node.field_profile_appointment_link.0.value
 } %}
 
   {% block breadcrumb %}
