--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -86,6 +86,7 @@
         "rating_icon": rating_icon,
         "type": content.field_profile_type|field_value
       },
+      "appointment_link": node.field_profile_appointment_link.0.value,
       "link": {
         "href": appointment_link,
         "text": appointment_text,
