Theme changes for show address2.

--- a/docroot/themes/custom/tower_health/templates/content/node--location--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--page-header.html.twig
@@ -78,6 +78,7 @@
   "name": name,
   "address_1": address_1,
   "address_2": address_2,
+  "address_local": address_local,
   "directions": {
     "url": href,
     "button_icon": button_icon,
