--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
@@ -72,7 +72,7 @@
 #}
 {% include "@organisms/teasers/location-teaser--small/location-teaser--small.twig" with {
     "name": label,
-    "address_rows": [address_1, address_2],
+    "address_rows": [address_1, address_2, address_local],
     "direction_url": href,
     "button_icon": button_icon,
     "phone": phone,
