--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
@@ -81,6 +81,7 @@
         "name": label,
         "address1": address_1,
         "address2": address_2,
+        "address_local": address_local,
         "phone": phone,
         "fax": fax,
         "hours": hours,
