--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
@@ -8,7 +8,10 @@
           <div class="location-details__child">
             <span class="location-details__label">Address</span>
             <span class='location-details__info'>{{ address_1 }}</span>
-            <span class='location-details__info'>{{ address_2 }}</span>
+            {% if address_2 %}
+              <span class='location-details__info'>{{ address_2 }}</span>
+            {% endif %}
+            <span class='location-details__info'>{{ address_local }}</span>
           </div>
           <div class="location-details__child">
             {% include "@atoms/icon-button/icon-button.twig" with {
