--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
@@ -77,6 +77,7 @@
     "button_icon": button_icon,
     "phone": phone,
     "fax": fax,
+    "hide_cta": node.field_location_doctor_link.0.value,
     "cta": {
       "url": location_providers_url,
       "label": "View other doctors at this location"|t
