Add popup helper text.

--- a/docroot/themes/custom/tower_health/templates/fields/field--field-area-interest-ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field-area-interest-ref.html.twig
@@ -41,7 +41,7 @@
   "detail": {
     "label": "Clinical Areas of Focus"|t,
     "items": focuses,
-    "info": "Lorem ipsum",
+    "info": "A specialty that a doctor or Advanced Practice Provider practices that is not included in their board certification."|t,
     "info_id": "areas-focus"
   }
 } %}
