--- a/docroot/themes/custom/tower_health/templates/form/facets-item-list--radio-widget.html.twig
+++ b/docroot/themes/custom/tower_health/templates/form/facets-item-list--radio-widget.html.twig
@@ -32,7 +32,7 @@
 {%
 set item = {
   'type': 'drupal-facet',
-  'info': 'Lorem ipsum help text'|t,
+  'info': 'Different types of providers qualified to offer you excellent care. <a href="/types">Learn more about each</a>.'|t,
   'info_id': 'type',
   'title': facet.name,
   'elements': radios,
