--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser-small.html.twig
@@ -73,7 +73,7 @@
 {% set hide_cta = FALSE %}
 {% if node.field_location_doctor_link.0.value == 1 %}
     {% set hide_cta = TRUE %}
-{% end %}
+{% endif %}
 {% include "@organisms/teasers/location-teaser--small/location-teaser--small.twig" with {
     "name": label,
     "address_rows": [address_1, address_2, address_local],
