remove animation from icon buttons in the row

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/button-row/button-row.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/button-row/button-row.twig
@@ -7,7 +7,7 @@
           "url": link.url,
           "button_icon": link.button_icon,
           "text": link.text,
-          "animated": "true",
+          "animated": null,
           "variation": "white"
         } %}
       {% endfor %}
