Add indepedent flag to doctor profile and teaser.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -215,6 +215,12 @@
     font-style: italic;
     margin-right: 1em;
   }
+
+  .divider {
+    @include adjust-font-size-to($label, 1);
+    display: inline-block;
+    margin: 0 .5em;
+  }
 }
 
 .teaser__content {
