--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -84,7 +84,8 @@
         "location": location,
         "rating": content.field_rating_overall.0['#markup'],
         "rating_icon": rating_icon,
-        "type": content.field_profile_type|field_value
+        "type": content.field_profile_type|field_value,
+        "employed_flag": employed_flag
       },
       "appointment_link": node.field_profile_appointment_link.0.value,
       "link": {
