--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
@@ -26,10 +26,16 @@
           {% if type|render != 'Doctor' %}
           {{ type }}
           {% endif %}
-          {% if type|render != 'Doctor' and lead_title %}
+
+          {% if type|render != 'Doctor' and (lead_title or employed_flag) %}
             <span class="divider">&#8226;</span>
           {% endif %}
 
+          {{ employed_flag }}
+
+          {% if type|render != 'Doctor' and lead_title and employed_flag %}
+            <span class="divider">&#8226;</span>
+          {% endif %}
           {{ lead_title }}
         </span>
         {% endif %}
