--- a/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--page-header.html.twig
@@ -88,6 +88,7 @@
   "name": name,
   "type": content.field_profile_type|field_value,
   "lead_title": lead_title,
+  "employed_flag": employed_flag,
   "provider_video": provider_video,
   "rating": rating,
   "review_amt": review_amt,
