add employed flag to provider header

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/_provider-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/_provider-header.scss
@@ -113,6 +113,12 @@
   }
 }
 
+.provider-header__status {
+  @include adjust-font-size-to($sm-text, .9);
+  display: block;
+  font-style: italic;
+}
+
 .provider-header__ratings {
   margin-top: 2em;
   display: flex;
