--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
@@ -27,17 +27,15 @@
           {{ type }}
           {% endif %}
 
-          {% if type|render != 'Doctor' and (lead_title or employed_flag) %}
-            <span class="divider">&#8226;</span>
-          {% endif %}
-
-          {{ employed_flag }}
-
-          {% if type|render != 'Doctor' and lead_title and employed_flag %}
+          {% if type|render != 'Doctor' and lead_title %}
             <span class="divider">&#8226;</span>
           {% endif %}
           {{ lead_title }}
         </span>
+        {% endif %}
+        
+        {% if employed_flag %}
+        <span  class="provider-header__status">{{ employed_flag }}</span>
         {% endif %}
 
         {% if provider_video %}
