Fix css around two column lists.

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/text/_text.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/text/_text.scss
@@ -59,9 +59,15 @@
 }
 
 .rich-text__two-col {
+  @include paragraph;
   
   @include breakpoint($bp2) {
     column-count: 2;
     column-gap: 1.5em;
+  }
+
+  ol,
+  ul {
+    margin-top: 0;
   }
 }
